[gd_scene load_steps=3 format=2]

[ext_resource path="res://Grafik/Assets/GUI/btnMainmenu.png" type="Texture" id=1]
[ext_resource path="res://Szenen/GUI/BtnMainMenuBg.gd" type="Script" id=2]

[node name="ButtonMainMenuBg" type="Sprite"]
position = Vector2( 0, -90 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="label" type="Control" parent="."]
margin_left = -155.0
margin_top = -28.0
margin_right = 156.0
margin_bottom = 28.0
mouse_default_cursor_shape = 2

[connection signal="gui_input" from="label" to="." method="_on_label_gui_input"]
[connection signal="mouse_entered" from="label" to="." method="_on_label_mouse_entered"]
[connection signal="mouse_exited" from="label" to="." method="_on_label_mouse_exited"]
